BUG FIX: Updated Random Algorithm
I had a bug in which, if I entered into an entry page from the 'Random Page' link, and then I tried to edit that entry, I would get an error message. Now, I can properly edit the page, even if I enter into it from 'Random page'.

--- a/entries/JS50.md
+++ b/entries/JS50.md
@@ -1,2 +1,5 @@
 # JS 50
-I should be taken directly to this new entry's page, and the URL should be "/wiki/JS50".
+
+I should be taken directly to this new entry's page, and the URL should be "/wiki/JS50".
+
+I edited the JS 50 Entry by first entering to this page via "Random Page".
